testsuite/tests/linear/should_fail/T19361.stderr
T19361.hs:8:3: error: [GHC-25897]
    • Couldn't match type ‘m’ with ‘Many’
        arising from multiplicity of ‘x’
      ‘m’ is a rigid type variable bound by
        the type signature for:
          f :: forall a. a -> a
        at T19361.hs:7:1-32
    • In an equation for ‘f’: f x = g x
    • Relevant bindings include f :: a %m -> a (bound at T19361.hs:8:1)

